[gd_scene load_steps=23 format=3 uid="uid://bo3k7fhttle"]

[ext_resource type="Script" uid="uid://cf62ym5mnip0j" path="res://Scripts/generic_npc.gd" id="1_7w1dc"]
[ext_resource type="Texture2D" uid="uid://bmdawhrjubk8y" path="res://Assets/Entities/chomp_idle.png" id="1_io706"]
[ext_resource type="Texture2D" uid="uid://dvbcq48ohdrex" path="res://Assets/UI/UI books & more.png" id="2_gkk53"]
[ext_resource type="Theme" uid="uid://y1l8bqsf7l6w" path="res://Themes/in_world_theme.tres" id="4_iflxh"]
[ext_resource type="PackedScene" uid="uid://0caqxwd3bslv" path="res://Scenes/emoter.tscn" id="5_nwoq2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iflxh"]
radius = 54.0833

[sub_resource type="AtlasTexture" id="AtlasTexture_qf6w4"]
atlas = ExtResource("1_io706")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeyoo"]
atlas = ExtResource("1_io706")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_loobb"]
atlas = ExtResource("1_io706")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic3tt"]
atlas = ExtResource("1_io706")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydkgc"]
atlas = ExtResource("1_io706")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcg17"]
atlas = ExtResource("1_io706")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1xbf"]
atlas = ExtResource("1_io706")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubagc"]
atlas = ExtResource("1_io706")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7act"]
atlas = ExtResource("1_io706")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gliya"]
atlas = ExtResource("1_io706")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hacyw"]
atlas = ExtResource("1_io706")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5adhm"]
atlas = ExtResource("1_io706")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gkk53"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf6w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeyoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loobb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic3tt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydkgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcg17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1xbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubagc")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7act")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gliya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hacyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5adhm")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7w1dc"]
atlas = ExtResource("2_gkk53")
region = Rect2(593, 224, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_iflxh"]
atlas = ExtResource("2_gkk53")
region = Rect2(593, 256, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwoq2"]
atlas = ExtResource("2_gkk53")
region = Rect2(593, 240, 14, 16)

[node name="Generic NPC" type="Area2D"]
script = ExtResource("1_7w1dc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iflxh")

[node name="character_image" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_gkk53")
animation = &"idle"
autoplay = "idle"

[node name="talk_button" type="TextureButton" parent="."]
visible = false
offset_left = -14.0
offset_top = -59.0
offset_bottom = -44.0
scale = Vector2(2, 2)
texture_normal = SubResource("AtlasTexture_7w1dc")
texture_pressed = SubResource("AtlasTexture_iflxh")
texture_hover = SubResource("AtlasTexture_nwoq2")

[node name="nametag" type="Label" parent="."]
visible = false
offset_left = -49.0
offset_top = 39.0
offset_right = 50.0
offset_bottom = 54.0
theme = ExtResource("4_iflxh")
text = "chom bomb"
horizontal_alignment = 1

[node name="emoter" parent="." instance=ExtResource("5_nwoq2")]
visible = false
position = Vector2(1, -44)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="talk_button" to="." method="_on_talk_button_pressed"]
